added grid-search to optimize models

--- a/templates/components/addOrders_details.html
+++ b/templates/components/addOrders_details.html
@@ -13,7 +13,7 @@
                       </div>
                   </div>
               </div>
-              <div class="sub-title">* Salads</div>
+              <div class="sub-title">* Salades</div>
               <div class="row">
                   <div class="col-md-6">
                       <div class="form-group">
@@ -85,7 +85,7 @@
                       </div>
                   </div>
               </div>
-              <div class="sub-title">* Pastries</div>
+              <div class="sub-title">* Viennoiseries</div>
               <div class="row">
                   <div class="col-md-6">
                       <div class="form-group">
