Fixed some bugs and translated some words

--- a/templates/components/addOrders_details.html
+++ b/templates/components/addOrders_details.html
@@ -38,7 +38,7 @@
                   </div>
                   <div class="col-md-6">
                       <div class="form-group">
-                          <span class="form-label">Sandwiches thon cruditès</span>
+                          <span class="form-label">Sandwiches thon crudités</span>
                           <input class="form-control shadow-none" type="text" name="sandwichesThonCrudites" value="0">
                       </div>
                   </div>
