--- a/templates/components/sandwichOrders_details.html
+++ b/templates/components/sandwichOrders_details.html
@@ -15,7 +15,7 @@
               <tr>
                 <th scope="col">Date</th>
                 <th scope="col">Sandwiches poulet crudités</th>
-                <th scope="col">Sandwiches thon cruditès</th>
+                <th scope="col">Sandwiches thon crudités</th>
                 <th scope="col">Sandwiches végétarien</th>
                 <th scope="col">Sandwiches poulet mexicain</th>
                 <th scope="col">Sandwiches chèvre miel crudités</th>
