--- a/templates/components/sandwich_details.html
+++ b/templates/components/sandwich_details.html
@@ -2,7 +2,7 @@
   {% include 'components/head.html' %}
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs poulet crudités</h3>
+      <h3 class="chart-title">Sandwiches poulet crudités</h3>
       <select class="form-select shadow-none select-0">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
@@ -15,7 +15,7 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs thon crudités</h3>
+      <h3 class="chart-title">Sandwiches thon crudités</h3>
       <select class="form-select shadow-none select-1">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
@@ -28,7 +28,7 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs végétarien</h3>
+      <h3 class="chart-title">Sandwiches végétarien</h3>
       <select class="form-select shadow-none select-2">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
@@ -41,7 +41,7 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs poulet mexicain</h3>
+      <h3 class="chart-title">Sandwiches poulet mexicain</h3>
       <select class="form-select shadow-none select-3">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
@@ -54,7 +54,7 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs chèvre miel crudités</h3>
+      <h3 class="chart-title">Sandwiches chèvre miel crudités</h3>
       <select class="form-select shadow-none select-4">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
@@ -67,7 +67,7 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs poulet curry</h3>
+      <h3 class="chart-title">Sandwiches poulet curry</h3>
       <select class="form-select shadow-none select-5">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
@@ -80,7 +80,7 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwichs saumon</h3>
+      <h3 class="chart-title">Sandwiches saumon</h3>
       <select class="form-select shadow-none select-6">
         <option selected value="semaine">Semaine</option>
         <option value="mois">Mois</option>
