--- a/templates/pages/correlation.html
+++ b/templates/pages/correlation.html
@@ -18,7 +18,7 @@
           <th class="col">Sandwiches poulet curry</th>
           <th class="col">Sandwiches poulet mexicain</th>
           <th class="col">Sandwiches saumon</th>
-          <th class="col">Sandwiches thon cruditès</th>
+          <th class="col">Sandwiches thon crudités</th>
           <th class="col">Sandwiches végétarien</th>
         </tr>
       </thead>
@@ -60,7 +60,7 @@
           <th class="col">Sandwiches saumon</th>
         </tr>
         <tr class="justify-content-around">
-          <th class="col">Sandwiches thon cruditès</th>
+          <th class="col">Sandwiches thon crudités</th>
         </tr>
         <tr class="justify-content-around">
           <th class="col">Sandwiches végétarien</th>
