--- a/templates/components/optimize_details.html
+++ b/templates/components/optimize_details.html
@@ -11,7 +11,7 @@
                     <option value="Croissant">Croissant</option>
                     <option value="Pains suisses">Pains suisses</option>
                     <option value="Sandwiches poulet crudités">Sandwiches poulet crudités</option>
-                    <option value="Sandwiches thon cruditès">Sandwiches thon cruditès</option>
+                    <option value="Sandwiches thon crudités">Sandwiches thon crudités</option>
                     <option value="Sandwiches végétarien">Sandwiches végétarien</option>
                     <option value="Sandwiches poulet mexicain">Sandwiches poulet mexicain</option>
                     <option value="Sandwiches chèvre miel crudités">Sandwiches chèvre miel crudités</option>
@@ -29,24 +29,24 @@
         <div class="mask-custom">
             <div class="card-body p-4">
         
-            <div class="text-center pt-3 pb-2">
-                <h2 class="my-4">Liste de produits</h2>
-            </div>
-            <div class="table-container">
-            <table id="orders-table" class="table text-white mb-0">
-                <thead>
-                <tr class="justify-content-around">
-                    <th scope="col">Nom du produit</th>
-                    <th scope="col">Modèle associé</th>
-                    <th scope="col">Paramètre du modèle</th>
-                    <th scope="col">RMSE</th>
-                </tr>
-                </thead>
-                <tbody id="orders-body">
-                
-                </tbody>
-            </table>
-            </div>
+                <div class="text-center pt-3 pb-2">
+                    <h2 class="my-4">Liste de produits</h2>
+                </div>
+                <div class="table-container">
+                    <table id="orders-table" class="table text-white mb-0">
+                        <thead>
+                        <tr class="justify-content-around">
+                            <th scope="col">Nom du produit</th>
+                            <th scope="col">Modèle associé</th>
+                            <th scope="col">Paramètre du modèle</th>
+                            <th scope="col">RMSE</th>
+                        </tr>
+                        </thead>
+                        <tbody id="orders-body">
+                        
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
