Translating some other words

--- a/templates/components/addOrders_details.html
+++ b/templates/components/addOrders_details.html
@@ -2,7 +2,7 @@
   <div class="card mask-custom shadow">
       <div class="card-body p-4">
           <div class="text-center pt-3 pb-2">
-              <h2 class="my-4 title">Add Your Order</h2>
+              <h2 class="my-4 title">Ajouter votre commande</h2>
           </div>
           <form>
               <div class="row">
@@ -109,7 +109,7 @@
           </form>
           <!-- Bouton "+" pour ajouter une nouvelle ligne -->
           <div class="text-center mt-3">
-              <button onclick="addNewRow()" class="btn btn-add-row shadow-none"><ion-icon name="add-outline"></ion-icon> Add new order</button>
+              <button onclick="addNewRow()" class="btn btn-add-row shadow-none"><ion-icon name="add-outline"></ion-icon> Ajouter une nouvelle commande</button>
           </div>
       </div>
   </div>
