--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -6,7 +6,7 @@
   </figure>
   <figure class="sandwich-head">
     <img class="hovred-img" src="../../static/utils/images/sandwich.jpg" alt="Mountains" />
-    <figcaption>Sandwich</figcaption>
+    <figcaption>Sandwiches</figcaption>
   </figure>
   <figure class="viennoiseries-head">
     <img class="hovred-img" src="../../static/utils/images/viennoiseries.jpg" alt="Mountains" />
