--- a/templates/components/saladeOrders_details.html
+++ b/templates/components/saladeOrders_details.html
@@ -7,7 +7,7 @@
         <div class="card-body p-4">
     
           <div class="text-center pt-3 pb-2">
-            <h2 class="my-4">Salad's Orders</h2>
+            <h2 class="my-4">Les commandes de salades</h2>
           </div>
           <div class="table-container">
           <table id="orders-table" class="table text-white mb-0">
