--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -61,7 +61,7 @@
             <!-- <li>
               <hr class="dropdown-divider" />
             </li> -->
-            <li><a class="dropdown-item" href="http://127.0.0.1:5000/logout">Sign out</a></li>
+            <li><a class="dropdown-item" href="http://127.0.0.1:5000/logout">Se déconnecter</a></li>
           </ul>
         
         </div>
