--- a/static/css/optimize.css
+++ b/static/css/optimize.css
@@ -139,3 +139,40 @@ tr:nth-child(even) {
   padding: 2em;
   
 }
+
+/* Styles pour la fenêtre modale */
+.modal {
+  display: none; /* Par défaut, la fenêtre modale est cachée */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.5); /* Fond assombri */
+}
+
+/* Contenu de la fenêtre modale */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* Centrer verticalement */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* Styles pour la barre de chargement */
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db; /* Couleur de la barre de chargement */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
