--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -4,9 +4,9 @@
     <div class="container overflow-hidden">
       <div class="row gy-4 gy-md-0">
         <div class="col-xs-12 col-md-7 order-1 order-md-0">
-          <div class="copyright text-center text-md-start">&copy; 2024. All Rights Reserved.</div>
+          <div class="copyright text-center text-md-start">&copy; 2024. Tous droits réservés.</div>
           <div class="credits text-secondary text-center text-md-start mt-2 fs-7">
-            Built by  ENSEA Students 
+            Fait par des étudiants de l'ENSEA 
             <span style="color: #6A563D;">&#9829;</span>
           </div>
         </div>
