--- a/templates/components/optimize_details.html
+++ b/templates/components/optimize_details.html
@@ -1,5 +1,17 @@
 <div class="salade">
+    <!-- La fenêtre modale -->
+    <div id="loadingModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Chargement en cours...</h2>
+            </div>
+            <div class="modal-body">
+                <div class="loader"></div>
+            </div>
+        </div>
+    </div>
     <div class="container mt-5">
+        <div class="loading-bar" id="loading-bar"></div>
         <h1 class="text-center">Optimisation des paramètres du modèle</h1>
         
         <form action="/optimize" method="post">
