--- a/templates/components/viennoiseriesOrders_details.html
+++ b/templates/components/viennoiseriesOrders_details.html
@@ -4,7 +4,7 @@
   <div class="card mask-custom">
     <div class="card-body p-4 ">
       <div class="text-center pt-3 pb-2">
-        <h2 class="my-4">Pastries's Orders</h2>
+        <h2 class="my-4">Les commandes de viennoiseries</h2>
       </div>
       <div class="table-container">
         <table id="orders-table" class="table text-white mb-0">
