--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -41,7 +41,7 @@
             </a>
           </li>
         </ul> 
-          <div class="dropdown pb-4">
+          <div class="dropdown pb-4" style="margin-left: 2em;">
           <hr>
           <a
             class="d-flex align-items-center text-white  dropdown-toggle user-icon"
