--- a/templates/components/saladeOrders_details.html
+++ b/templates/components/saladeOrders_details.html
@@ -28,7 +28,9 @@
       </div>
 
       
-   
+      <form id="edit-form">
+        <!-- Vos champs de formulaire ici -->
+    </form>
      
     
 </div>
