--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -6,18 +6,18 @@
       <img src="../../static/utils/images/cafe.png" class="top-image" />
 
     </div>
-    <h4>Welcome to the K-fet ENSEA dashboard</h4>
+    <h4>Bienvenue sur le tableau de bord K-fet ENSEA</h4>
     <div class="">
-      <label for="email" class="form-label">Email address</label>
+      <label for="email" class="form-label">Email</label>
       <input type="email" class="form-control py-2  shadow-none " name="email" id="email" required />
     </div>
     <div class="">
-      <label for="password" name="password" class="form-label">Password</label>
+      <label for="password" name="password" class="form-label">Mots de passe</label>
       <input type="password" class="form-control py-2  shadow-none" id="password" name="password" required />
     </div>
 
     <button type="submit" disabled style="border-radius: 2em; background-color: #6a563d; color: #f1f1f1; font-size: 1.2em" class="btn shadow-none login-btn">
-      Login
+      Se connecter
     </button>
   </form>
 </div>
